--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             rel="stylesheet"
         />
         <link rel="stylesheet" href="index.css" />
+        <title>Dice Game</title>
     </head>
     <body>
         <header>
